-Fix some issues with Explosion damage calcs.
-Add ability to disable cornering multiplier when using space hacks
-Space hacks craft friction no longer applied to root part at the position of the CoM; large craft whould have an easier time turning now.
-Fix issue with armor panels potentially spalling away more than the entire volume of the plate and getting instantly deleted.

IMPROVEMENTS / FIXES
- General:
	- Blacklist the PotatoRoid due to it not having a valid prefab (they get procedurally generated) and causing NREs.
	- Add try-catch around setting the gear action group due to the FSM sometimes breaking it and breaking pilot initialisation.
	- Remove HP rounding and lower HP limit for MM-patched parts. Apply health modifier after applying rounding and lower HP limit for non-MM-patched parts.
- UI:
	- Add a keybind for targeting the next GPS target.
	- Add labels to the vessel switcher score entries for rockets, missiles, rams and tag.
	- Parts with zero lift now appear as grey in the lift visualizer.
	- Fix issues with wing stacking calculation. Calculation now returns ratio of non-separated vertically stacked lift area to total lift area (capped at 100%). Wings spaced sufficiently apart will not contribute to the stacking value.
- AI / WM:
	- AI will start evading missiles once the missile engine activates instead of waiting for 1 second after launch.
	- When avoiding terrain and roll is inverted by more than 30°, reverse the roll target so that terrain avoidance is done while fully inverted and enable Aiming steer mode for more yaw control.

v1.5.8.0
IMPROVEMENTS / FIXES
- General:
	- Fix Firebottle mass not resetting if a part switched from fueltank to structural.
- UI:
	- Fix layout of vessel switcher window buttons and version label.
	- Add debug button when DEBUG_OTHER is enabled for dumping part info.
	- Add a 'Start competition automatically' button to the Vessel Spawner window for use with 'single spawn'.
	- Updated German localisation from EzBro.