@@ -292,6 +292,7 @@ namespace BDArmory.Weapons.Missiles
 
         private bool OldInfAmmo = false;
         private bool StartSetupComplete = false;
+        private string OriginalShortname;
         public bool SetupComplete => StartSetupComplete;
         #endregion Variable Declarations
 
@@ -372,7 +373,6 @@ namespace BDArmory.Weapons.Missiles
                 weaponClass = WeaponClasses.Missile;
             }
         }
-
         public override void OnStart(StartState state)
         {
             //base.OnStart(state);
@@ -381,6 +381,8 @@ namespace BDArmory.Weapons.Missiles
             {
                 shortName = part.partInfo.title;
             }
+            var OGName = ConfigNodeUtils.FindPartModuleConfigNodeValue(part.partInfo.partConfig, "MissileLauncher", "shortName");
+            OriginalShortname = OGName != null ? OGName : part.partInfo.title;
             gaplessEmitters = new List<BDAGaplessParticleEmitter>();
             pEmitters = new List<KSPParticleEmitter>();
             boostEmitters = new List<KSPParticleEmitter>();
@@ -406,7 +408,12 @@ namespace BDArmory.Weapons.Missiles
             if (reloadableRail == null && hasAmmo)
             {
                 reloadableRail = part.FindModuleImplementing<ModuleMissileRearm>();
-                if (reloadableRail == null) hasAmmo = false;
+                Debug.Log("looking for Missilerearm...");
+                if (reloadableRail == null)
+                {
+                    Debug.Log("MissileRearm not found");
+                    hasAmmo = false;
+                }
             }
 
             multiLauncher = part.FindModuleImplementing<MultiMissileLauncher>();
@@ -421,6 +428,7 @@ namespace BDArmory.Weapons.Missiles
 
             if (HighLogic.LoadedSceneIsFlight)
             {
+                shortName = $"{OriginalShortname};{engageRangeMax}";
                 if (multiLauncher)
                 {
                     hasAmmo = true;
@@ -967,7 +975,7 @@ namespace BDArmory.Weapons.Missiles
                     TimeFired = Time.time;
                     part.decouple(0);
                     part.Unpack();
-                    vessel.vesselName = GetShortName();
+                    vessel.vesselName = GetShortName().Substring(0, GetShortName().IndexOf(";"));
                     TargetPosition = (multiLauncher ? vessel.ReferenceTransform.position + vessel.ReferenceTransform.up * 5000 : transform.position + transform.forward * 5000); //set initial target position so if no target update, missileBase will count a miss if it nears this point or is flying post-thrust
                     MissileLaunch();
                     BDATargetManager.FiredMissiles.Add(this);
@@ -994,7 +1002,7 @@ namespace BDArmory.Weapons.Missiles
             ml.GuidanceMode = GuidanceMode;
             //wpm.SendTargetDataToMissile(ml);
             ml.TimeFired = Time.time;
-            ml.vessel.vesselName = GetShortName();
+            ml.vessel.vesselName = GetShortName().Substring(0, GetShortName().IndexOf(";"));
             ml.DetonationDistance = DetonationDistance;
             ml.DetonateAtMinimumDistance = DetonateAtMinimumDistance;
             ml.dropTime = dropTime;
@@ -1033,8 +1041,7 @@ namespace BDArmory.Weapons.Missiles
                 ml.reloadableRail.MissileName = multiLauncher.subMunitionName;
                 ml.reloadableRail.UpdateMissileValues();
             }
-
-            if (!BDArmorySettings.INFINITE_ORDINANCE) reloadableRail.ammoCount--;
+            GetMissileCount();
             if (reloadableRail.ammoCount > 0 || BDArmorySettings.INFINITE_ORDINANCE)
             {
                 if (!(reloadRoutine != null))
@@ -2302,7 +2309,7 @@ namespace BDArmory.Weapons.Missiles
                 {
                     Vector3 position = transform.position;//+rigidbody.velocity*Time.fixedDeltaTime;
 
-                    ExplosionFx.CreateExplosion(position, blastPower, explModelPath, explSoundPath, ExplosionSourceType.Missile, 0, part, SourceVessel.vesselName, GetShortName(), default(Vector3), -1, false, part.mass * 1000);
+                    ExplosionFx.CreateExplosion(position, blastPower, explModelPath, explSoundPath, ExplosionSourceType.Missile, 0, part, SourceVessel.vesselName, GetShortName().Substring(0, GetShortName().IndexOf(";")), default(Vector3), -1, false, part.mass * 1000);
                 }
                 if (part != null && !FuseFailed)
                 {
